# tide2-core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PUBLISHING.md  README.md  SECURITY.md  bdf.yaml  conftest.py  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-start.sh
.github/: dependabot.yml
.github/workflows/: build.yaml  docs.yml  pr-title-lint.yml  publish.yml  release-please.yml  scorecard.yml
notebooks/: tide2_llm_only.py  tide2_pipeline.ipynb
notebooks/evaluation/: README.md  evaluation_config.py  run_eval.ipynb  span_eval.py  token_eval.py
notebooks/sample_data/: README.md
notebooks/sample_data/gold_standard/: note_1.json  note_10.json  note_11.json  note_12.json  note_13.json  note_2.json  note_3.json  note_4.json  note_5.json  note_6.json  note_7.json  note_8.json  note_9.json
notebooks/sample_data/patient_phi/: note_1.json  note_10.json  note_11.json  note_12.json  note_13.json  note_2.json  note_3.json  note_4.json  note_5.json  note_6.json  note_7.json  note_8.json  note_9.json
notebooks/sample_data/text_files/: note_1.txt  note_10.txt  note_11.txt  note_12.txt  note_13.txt  note_2.txt  note_3.txt  note_4.txt  note_5.txt  note_6.txt  note_7.txt  note_8.txt  note_9.txt
scripts/: first_release.sh  parquet_utils.py  validate_row_id.py
src/tide2/: __init__.py  _optional.py
src/tide2/actors/: __init__.py  anonymizer.py  llm_recognizer.py  reassembly.py  recognizer.py  transformer.py
src/tide2/anonymizers/: __init__.py  accession_number_hash.py  age_grouping.py  date_jitter.py  faker.py  hips_alphanumeric.py  hips_locations.py  hips_names.py  masking.py  presidio_patches.py
src/tide2/cli/: __init__.py  main_visualizer.py  unified_interface.py
src/tide2/cryptographic/: __init__.py  date_jitter.py  fpe_strings.py  keys_utils.py  string_selector.py
src/tide2/recognizers/: __init__.py  accession_recognizer.py  address_recognizer.py  base64_image_recognizer.py  cached_results_transformers_recognizer.py  email_recognizer.py  genetic_sequence_recognizer.py  har_recognizer.py  institution_recognizer.py  known_values.py  llm_json_recognizer.py  mrn_recognizer.py  passthrough_recognizer.py  phone_recognizer.py  ssn_recognizer.py  transformers_recognizer.py  url_recognizer.py
src/tide2/resources/: bert_transformer_configuration.json  cities.tsv  countries.tsv  first_names_with_sex.tsv  hospitals.txt  runner_config_example.yaml  states.tsv  stopwords.txt  street_names.tsv  surnames.tsv  unified_names.tsv  zipcodes.tsv
src/tide2/resources/llm_prompts/: phi_detection.json  phi_detection.txt
src/tide2/runner/: __init__.py  cli.py  fault_tolerance.py  local_runner.py  transformer.py  utils.py
src/tide2/string_parsers/: __init__.py  address_parsers.py  format_detector.py  name_parsers.py  name_tokenizer.py
src/tide2/transformers/: __init__.py  config.py  core.py
src/tide2/utils/: __init__.py  batch_columns.py  constants.py  gcs_connector.py  gcs_resource_manager.py  llm_model.py  resource_utils.py  serialization.py  span_metrics.py  text_processing.py
tests/: test_accession_recognizer_fast.py  test_age_group_anonymizer.py  test_cache_utils.py  test_cpu_knobs.py  test_date_jitter_anonymizer.py  test_faker_anonymizer.py  test_fpe_strings.py  test_gcs_connector.py  test_har_recognizer.py  test_hips_alphanumeric_anonymizer.py  test_hips_location_anonymizer.py  test_hips_names_anonymizer.py  test_institution_recognizer.py  test_known_values_recognizer.py  test_llm_json_recognizer.py  test_llm_model.py  test_masking_anonymizer.py  test_mrn_recognizer.py  test_passthrough_recognizer.py  test_presidio_patches.py  test_recognizer_nlp_engine.py  test_row_id_generation.py  test_span_metrics.py  test_text_processing.py  test_transformers_recognizer.py
