[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/tide2/_version.py"

[project]
name = "tide2"
dynamic = ["version"]
description = "An advanced data de-identification and anonymization toolkit combining multiple strategies with cryptographic techniques and ML-based entity recognition"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "TIDE 2.0 Team" }]
keywords = [
    "anonymization",
    "de-identification",
    "pii",
    "privacy",
    "healthcare",
    "data-protection",
    "nlp",
    "presidio",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # LLM and AI providers
    "anthropic",
    "google-cloud-aiplatform[prediction]",
    "google-genai",
    "openai",
    # Google Cloud services
    "db-dtypes",
    "google-cloud-bigquery",
    "google-cloud-storage",
    # NLP (CPU-only components)
    "presidio-analyzer",
    "presidio-anonymizer",
    # Data processing
    "numpy",
    "intervaltree>=3.1.0",
    "orjson>=3.10.0",
    "pandas",
    "pyarrow>=14.0",
    # Cryptography and anonymization
    "faker",
    "ff3",
    "pyahocorasick",
    "usaddress",
    # Orchestration
    "ray[default,data]>=2.54.0",
    # Web and CLI
    "click>=8.1",
    "httpx>=0.25.0",
    "streamlit",
    # Utilities
    "psutil",
    "pyyaml>=6.0",
    "tenacity",
]

[project.optional-dependencies]
gpu = [
    "presidio-analyzer[transformers]",
    "spacy>=3.8.0",
    "torch",
    "transformers",
]
evaluation = [
    "scikit-learn>=1.8.0",
    "scipy>=1.12.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ty>=0.0.28",
    "pre-commit>=3.5.0",
    "ruff>=0.1.0",
    "pandas-stubs>=2.3.2.250926",
    "types-tqdm>=4.67.0.20250809",
    "cython",
    "ipykernel",
    "jupyter",
    "scikit-learn>=1.8.0",
    "scipy>=1.12.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.0",
    "keyring>=25.6.0",
    "keyrings-google-artifactregistry-auth>=1.1.2",
    "python-semantic-release>=10.5.3",
]
test = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]
docs = ["pdoc>=14.0"]

[project.scripts]
tide2-visualizer = "tide2.cli.main_visualizer:main"
tide2-runner = "tide2.runner.cli:main"

[project.urls]
Homepage = "https://github.com/susom/tide2"
Repository = "https://github.com/susom/tide2"
Issues = "https://github.com/susom/tide2/issues"
Documentation = "https://github.com/susom/tide2"

[tool.semantic_release]
commit_parser = "conventional"
commit_message = "chore(release): {version} [skip ci]"
major_on_zero = false
tag_format = "v{version}"
version_source = "tag"

[tool.semantic_release.changelog]
mode = "update"
default_templates = { changelog_file = "CHANGELOG.md" }
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Merged? .*''',
]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.development]
match = "development"
prerelease = true

[tool.semantic_release.branches."v*"]
match = "^v\\d+\\.\\d+$"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.uv]
# Build these from source to ensure numpy ABI compatibility
# This prevents "numpy.dtype size changed" errors when using numpy 2.x
#no-binary-package = ["thinc", "spacy", "blis"]
# keyring-provider = "subprocess"

# [[tool.uv.index]]
# name = "private-registry"
# url = "https://oauth2accesstoken@us-west1-python.pkg.dev/som-rit-infrastructure-prod/pypi-cache/simple/"
# default = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B101",
    "B601",
] # B101: assert used in tests. B601: subprocess.run in cli/main_visualizer.py uses a hardcoded argument list (no shell=True, no user input), safe from injection.


[tool.ty.environment]
python-version = "3.12"
# Set the first-party source root explicitly. By default ty auto-detects ./src,
root = ["src/tide2"]

[tool.ty.analysis]
# Suppress unresolved-import errors for GPU/distributed packages that lack stubs.
# Mirrors the behavior of mypy's ignore_missing_imports = true for these libs.
allowed-unresolved-imports = [
    "cudf.**",
    "cuml.**",
    "cugraph.**",
    "ray.**",
    "google.cloud.**",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "S",
    "B",
    "A",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "ICN",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "NPY",
    "RUF",
]
ignore = [
    "E501",
    "S101",
    "PLR0913",
    "PLR0912",
    "PLC0415", # Import at top level
    "EM101",   # String literal in exception
    "EM102",   # f-string literal in exception
    "TRY003",  # Long exception messages
    "N802",    # Function name should be lowercase (Qt methods)
    "ARG002",  # Unused method argument
    "C901",    # Too complex (for now)
    "TRY301",  # Abstract raise to an inner function
    "RUF001",
]

[tool.ruff.lint.isort]
known-first-party = ["tide2"]
force-single-line = true

# Per-file ignores for test files
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004", # Magic value in comparison
    "ARG001",  # Unused function argument (fixtures)
    "S101",    # Use of assert detected
]
"notebooks/**/*.*py*" = [
    "E402",   # Module level import not at top of file
    "ERA001", # Commented-out code used as usage examples
]
"src/tide2/runner/cli.py" = [
    "PLR0915", # Too many statements — CLI dispatch and argparse setup are inherently verbose
]

[tool.hatch.build.targets.wheel]
packages = ["src/tide2"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/LICENSE-MIT"]
exclude = [
    "/.git",
    "/.gitignore",
    "/data",
    "/examples",
    "/local",
    "/keys",
    "/tide2.egg-info",
    "/.pytest_cache",
    "/tmp",
    "/__pycache__",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (may be slower than unit tests)",
]
testpaths = ["tests"]
addopts = "--cov=tide2 --cov-report=term-missing --cov-report=html --cov-report=xml"
filterwarnings = ["ignore::DeprecationWarning:spacy.cli._util"]

[tool.coverage.run]
source = ["tide2"]
branch = true
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[dependency-groups]
gpu = [
    "presidio-analyzer[transformers]",
    "spacy>=3.8.0",
    "torch",
    "transformers",
]
evaluation = [
    "scikit-learn>=1.8.0",
    "scipy>=1.12.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ty>=0.0.28",
    "pre-commit>=3.5.0",
    "ruff>=0.1.0",
    "pandas-stubs>=2.3.2.250926",
    "types-tqdm>=4.67.0.20250809",
    "cython",
    "ipykernel",
    "jupyter",
    { include-group = "evaluation" },
    "keyring>=25.6.0",
    "keyrings-google-artifactregistry-auth>=1.1.2",
    "python-semantic-release>=10.5.3",
]
test = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]
docs = ["pdoc>=14.0"]
